fix megaminx large text clipping

--- a/timer/css/scramble.css
+++ b/timer/css/scramble.css
@@ -362,12 +362,12 @@
     cursor: not-allowed;
 }
 
-@media (max-width: 1150px) and (pointer: fine) {
+/* @media (max-width: 1125px) and (pointer: fine) {
     #scramble-text[data-scramble-layout="megaminx-rows"] {
         font-size: min(var(--text-lg), 1.15rem);
         word-spacing: normal;
     }
-}
+} */
 
 @media (min-width: 1101px) and (pointer: fine) {
     #scramble-bar {
